Enhance javac tool builder with several flag properties
- --enable-preview
- -parameters
- -deprecation
- -verbose
- -Werror